# gcs_star_quadruped

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt  test_gcsstar.py
examples/: example_visualize.py
src/: STAR_footstep_planning_gcs.ipynb  STAR_gcs_simple_2d_cspace-Copy1.ipynb  footstep_planning_gcs-Copy1.ipynb  footstep_planning_gcs.ipynb  gcs_simple_2d_cspace.ipynb  results.json
src/config/: flags.py
src/gcs/: gcs_star.py  gcs_star_trajopt.py  implic.py
src/gcs_star_drake/: STAR_gcs_simple_2d_cspace-Copy1.ipynb  footstep_planning_gcs-Copy1.ipynb  results.json
src/gcs_star_drake/environment/: basic.py
src/gcs_star_drake/gcs/: gcs_star.py  gcs_star_trajopt.py
src/gcs_star_drake/visualization/: basic.py
tests/: old_test_gcs_star.py  test_environment.py  test_gcs_star.py  test_gcs_trajopt.py
