[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcs_star_drake"
version = "0.1.0"
description = "GCS Star Planning with Drake"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "drake==0.0.20241205",
  "absl-py",
  "cython",
  "graphviz",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = [
  "--extra-index-url https://drake-packages.csail.mit.edu/whl/nightly"
]

[tool.hatch.build.targets.wheel]
packages = ["src/gcs_star_drake"]
